--- a/5IAS/javascript/Esercizio3/Corretto/index.html
+++ b/5IAS/javascript/Esercizio3/Corretto/index.html
@@ -13,12 +13,12 @@
     <div id="citazioni">
       <h2>Cosa disse</h2>
       <form name="form">
-        <input type="radio" name="person" id="sigmudfreud" value="sigmudfreud" checked><label for="sigmudfreud">...Sigmud Freud</label>
-        <input type="radio" name="person" id="napoleonebonaparte" value="napoleonebonaparte"><label for="napoleonebonaparte">...Napoleone Bonaparte</label>
-        <input type="radio" name="person" id="riccardoiii" value="riccardoiii"><label for="riccardoiii">...Riccardo III</label>
-        <input type="radio" name="person" id="cesarepavese" value="cesarepavese"><label for="cesarepavese">...Cesare Pavese</label>
-        <input type="radio" name="person" id="salomone" value="salomone"><label for="salomone">...Salomone</label>
-        <input type="radio" name="person" id="oscarwilde" value="oscarwilde"><label for="oscarwilde">...Oscar Wilde</label>
+        <input type="radio" name="person" id="sigmudfreud" value="sigmudfreud" checked><label for="sigmudfreud">...Sigmud Freud</label><br>
+        <input type="radio" name="person" id="napoleonebonaparte" value="napoleonebonaparte"><label for="napoleonebonaparte">...Napoleone Bonaparte</label><br>
+        <input type="radio" name="person" id="riccardoiii" value="riccardoiii"><label for="riccardoiii">...Riccardo III</label><br>
+        <input type="radio" name="person" id="cesarepavese" value="cesarepavese"><label for="cesarepavese">...Cesare Pavese</label><br>
+        <input type="radio" name="person" id="salomone" value="salomone"><label for="salomone">...Salomone</label><br>
+        <input type="radio" name="person" id="oscarwilde" value="oscarwilde"><label for="oscarwilde">...Oscar Wilde</label><br>
         <input type="button" onclick="getPhrase()" value="Get phrase!">
       </form>
     </div>
